# search_engine

./: CMakeLists.txt  README.md  main.cpp
include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h
jsons/: answers.json  config.json  requests.json
resources/: file001.txt  file002.txt  file003.txt  file004.txt  file005.txt
src/: ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp
